force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__ContentHTML__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ContentHTML__c</fullName>
    <description>An HTML code that will be rendered as content. This field overrules the Content field above.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter an HTML code that will be rendered as content. This field overrules the Content field above.</inlineHelpText>
    <label>HTML Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>