force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__FieldSet2__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__FieldSet2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Set 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>