force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__FilterFormula__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__FilterFormula__c</fullName>
    <formula>IF (      ( NOT( ISBLANK( FieloEE__Tag__c ) ) &amp;&amp;   ISPICKVAL(FieloEE__Filter2__c, &apos;&apos;)  ) ,             FieloEE__Tag__c,               IF( ( ISBLANK( FieloEE__Tag__c ) &amp;&amp;    NOT( ISPICKVAL(FieloEE__Filter2__c, &apos;&apos;)    )  ) ,                              TEXT(  FieloEE__Filter2__c ),                                     IF(                                         ( NOT( ISBLANK( FieloEE__Tag__c ) ) &amp;&amp;  NOT( ISPICKVAL(FieloEE__Filter2__c, &apos;&apos;)  )   )  ,                                          FieloEE__Tag__c,&apos;&apos;)       ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filter Formula</label>
    <type>Text</type>
</CustomField>