force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__NewsCategory__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__NewsCategory__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Content feed category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>