force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__Text__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>