force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__TransactionType__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__TransactionType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>