force-app/main/default/objects/FieloEE__Component__c/validationRules/FieloCH__Challenge_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCH__Challenge_Required</fullName>
    <active>true</active>
    <description>For Challenge components, except Subscribe, Actual or History, check if the lookup is filled.</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISBLANK( FieloCH__Challenge__c ),
    OR(RecordType.DeveloperName = &apos;ChallengeDetail&apos;, RecordType.DeveloperName = &apos;ChallengeRewards&apos;, RecordType.DeveloperName = &apos;ChallengeMissions&apos;, RecordType.DeveloperName = &apos;ChallengeLeaderboard&apos;) )</errorConditionFormula>
    <errorDisplayField>FieloCH__Challenge__c</errorDisplayField>
    <errorMessage>Must select a Challenge.</errorMessage>
</ValidationRule>